[package]
name = "compiler-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"] }
chumsky = { version = "0.13.0", features = [
    "pratt",
    "memoization",
    "lexical-numbers",
] }
clap = { version = "4.6.1", features = ["derive"] }
cranelift = { version = "0.132.0", features = ["jit", "module", "native"] }
slotmap = "1.1.1"
thiserror = "2.0.18"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }
